# mysyte

./: .gitignore  README.md  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt  teste.txt  teste_arquivo.py  vercel.json  wsgi.py
.vercel/: project.json
blog/: admin.py  factories.py  infos.txt  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0002_post_views.py
blog/models/: __init__.py  post.py
blog/views/: __init__.py  view.py
mysite/mysite/: settings.py
mysyte/: settings.py  urls.py  wsgi.py
templates/: about.html  base.html  index.html  sidebar.html
